# C-Plus-Plus

./: README.md
Bit_Manipultation/: check_if_power_of_2  check_if_power_of_2.cpp  count_bits_to_flip  count_bits_to_flip.cpp  find_only_set_bit  find_only_set_bit.cpp  get_set_clear_update.cpp  printing_binary_number.c  printing_binary_number.cpp  printing_powers_of_2.cpp
Hackerank_Questions/: 02_minMax.cpp  03_timeConversionAmPm.cpp  05_diagonalDifference.cpp  06_countingSort1.cpp  09_caesarCipher.cpp  11_1_recursiveDigitSumAdvanced.cpp  Class.cpp  Class_and_Objects.cpp  Pointer.cpp  Structs.cpp  Vector-Erase.cpp  basic_data_types.cpp  maps_stl.cpp  minimumSwapsVector.cpp  rectangle_area.cpp
PFMS exercises/: ex_04.cpp
Parsing Text File/: main.cpp
Programming For Mechatronic Systems (41012)/:  README.md
Programming For Mechatronic Systems (41012)/Assignment 2/: CMakeLists.txt  Doxyfile  ackerman.cpp  ackerman.h  controller.cpp  controller.h  controllerinterface.h  index.dox  logger.cpp  logger.h  main.cpp  mission.cpp  mission.h  missioninterface.h  quadcopter.cpp  quadcopter.h  tsp.cpp  tsp.h
Programming For Mechatronic Systems (41012)/Assignment 2/data/: ACKERMAN.TXT  QUADCOPTER.TXT
Programming For Mechatronic Systems (41012)/Assignment 2/test/: CMakeLists.txt  audiCheckOriginToDestination.cpp  audiReachGoal.cpp  audiReachGoalAllGoals.cpp  audiReachGoals.cpp  audiReachGoalsAdvanced.cpp  audiReachGoalsAdvancedAllGoals.cpp  audiReachGoalsAdvancedAllGoals2.cpp  audiReachGoalsAllGoals.cpp  missionExReachGoals.cpp  quadcopterCheckOriginToDestination.cpp  quadcopterReachGoal.cpp  quadcopterReachGoalAllGoals.cpp  quadcopterReachGoals.cpp  quadcopterReachGoalsAdvanced.cpp  quadcopterReachGoalsAdvancedAG.cpp  quadcopterReachGoalsAdvancedAG2.cpp  quadcopterReachGoalsAllGoals.cpp  test_helper.h
Programming For Mechatronic Systems (41012)/Exercises/: ex_01.cpp  ex_02.cpp  ex_03.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/: TEST.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/a1/: CMakeLists.txt  arrays.cpp  arrays.h  main.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/a1/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/a1/test/: utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/a2/: CMakeLists.txt  main.cpp  sample.cpp  sample.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz0/a2/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/: README.md  TEST.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/a1/: CMakeLists.txt  main.cpp  person.cpp  person.h  processing.cpp  processing.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/a1/marking/: CMakeLists.txt  utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/a1/test/: utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/a2/: CMakeLists.txt  main.cpp  processing.cpp  processing.h  rectangle.cpp  rectangle.h  shape.cpp  shape.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz1/a2/marking/: CMakeLists.txt  utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/: README.md  TEST.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/a1/: CMakeLists.txt  analysis.cpp  analysis.h  display_race.cpp  display_race.h  main.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/a1/dep/include/: car.h  carinterface.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/a1/marking/: utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/a1/test/: utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz2/a2/: CMakeLists.txt  container_ops.cpp  container_ops.h  main.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz3/: README.md  TEST.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz3/a1/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp  tf2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz3/a2/: CMakeLists.txt  analysis.cpp  analysis.h  main.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz3/a2/dep/include/: radar.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/: README.md  TEST.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/a1/: CMakeLists.txt  controller.cpp  controller.h  controllerinterface.h  main.cpp  quadcopter.cpp  quadcopter.h
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/a1/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/a1/test/: CMakeLists.txt  test_helper.h  utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/a2/src/: analysis.cpp  analysis.h  listener.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz4/a2/test/: utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz5/: README.md
Programming For Mechatronic Systems (41012)/Quizzes/quiz5/a1/: CMakeLists.txt
Programming For Mechatronic Systems (41012)/Quizzes/quiz5/a1/src/: detection_node.cpp  detection_node.h  laserprocessing.cpp  laserprocessing.h  main.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz5/a1/test/: utest.cpp
Programming For Mechatronic Systems (41012)/Quizzes/quiz5/a2/src/: detection_node.cpp  detection_node.h  main.cpp  rangeprocessing.cpp  rangeprocessing.h
Programming For Mechatronic Systems (41012)/TSP Brute Force Search/: README.md  graph_search.cpp  professors_graph_search.cpp
Text_File_Parsing/: README.md  main.cpp
hackerankQuestions/: 01_plusMinus.cpp  StringStream.cpp  Strings.cpp  Vector-Sort.cpp  conditional_statements.cpp  for_loop.cpp  functions.cpp  input_and_output.cpp  preprocessor_solution.cpp  say_hello_world_.cpp  sets_stl.cpp  variable_sized_arrays.cpp
hackerrank Questions/: 04_lonelyInteger.cpp  07_zebraSequence.cpp  08_towerBreakers.cpp  10_greedyChallenge.cpp  11_recursiveDigitSum.cpp  12_newYearChaos.cpp  13_mergeTwoSortedLinkedLists.cpp  readme
(+2 files in other folders)
